force-app/zurich-base/main/default/objects/Account/fields/IntermediaryWithUser__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryWithUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Referencia al registro de Cuenta Mediador asociado a la licencia de usuario compartida (si aplica).</description>
    <label>Intermediary With User</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Main Intermediaries</relationshipLabel>
    <relationshipName>MainIntermediaries</relationshipName>
    <type>Lookup</type>
</CustomField>