force-app/zurich-base/main/default/objects/Account/fields/IRPFIntermediaryType__c.field-meta.xml
<CustomField>
    <fullName>IRPFIntermediaryType__c</fullName>
    <label>IRPF Intermediary Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANDORRA EN ANDORRA</fullName>
            </value>
            <value>
                <fullName>ANDORRA EN ESPAÑA</fullName>
            </value>
            <value>
                <fullName>CEUTA Y MELILLA</fullName>
            </value>
            <value>
                <fullName>EXTRANJEROS</fullName>
            </value>
            <value>
                <fullName>INTERMEDIARIOS 2 PRIMEROS AÑOS PROF</fullName>
            </value>
            <value>
                <fullName>INTERMEDIARIOS CON SUBAGENTES/COLAB</fullName>
            </value>
            <value>
                <fullName>INTERMEDIARIOS RENDIMIENTOS REDUCID</fullName>
            </value>
            <value>
                <fullName>NORMAL</fullName>
            </value>
            <value>
                <fullName>SIN RETENCION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>