force-app/zurich-base/main/default/objects/Account/fields/IsAccountZDA__c.field-meta.xml
<CustomField>
    <fullName>IsAccountZDA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Utilizado para saber si una cuenta tiene pólizas u ofertas de ZDA</description>
    <label>IsAccountZDA</label>
    <type>Checkbox</type>
</CustomField>