force-app/zurich-base/main/default/objects/Account/fields/IsCurrentUserTemporaryRN__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentUserTemporaryRN__c</fullName>
    <description>Comprueba si el usuario comectado es RN Temporal de la cuenta.</description>
    <formula>$User.Email =  TemporaryRnEmail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current User Temporary RN?</label>
    <type>Checkbox</type>
</CustomField>