force-app/zurich-base/main/default/objects/Account/fields/IsSpecialist__c.field-meta.xml
<CustomField>
    <fullName>IsSpecialist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcado para cuentas de especialistas DSE (ZDA).</description>
    <label>Specialist</label>
    <type>Checkbox</type>
</CustomField>