force-app/zurich-base/main/default/objects/Account/fields/IsZurichInfluencer__c.field-meta.xml
<CustomField>
    <fullName>IsZurichInfluencer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Zurich Influencer?</label>
    <type>Checkbox</type>
</CustomField>