force-app/zurich-base/main/default/objects/Account/fields/KlincAccess__c.field-meta.xml
<CustomField>
    <fullName>KlincAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Klinc Access</label>
    <type>Checkbox</type>
</CustomField>