force-app/zurich-base/main/default/objects/Account/fields/KlincDistribution__c.field-meta.xml
<CustomField>
    <fullName>KlincDistribution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Klinc Distribution</label>
    <type>Checkbox</type>
</CustomField>