force-app/zurich-base/main/default/objects/Account/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>(OCS/ZE). Idioma de preferencia</description>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>German</fullName>
                <label>AL</label>
            </value>
            <value>
                <fullName>Catalan</fullName>
                <label>CA</label>
            </value>
            <value>
                <fullName>English</fullName>
                <label>EN</label>
            </value>
            <value>
                <fullName>Spanish</fullName>
                <label>ES</label>
            </value>
            <value>
                <fullName>French</fullName>
                <label>FR</label>
            </value>
            <value>
                <fullName>Dutch</fullName>
                <label>NL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>