force-app/zurich-base/main/default/objects/Account/fields/LastIntermediaryGroup__c.field-meta.xml
<CustomField>
    <fullName>LastIntermediaryGroup__c</fullName>
    <description>ZRM: Guardamos en este campo en caso de baja de un mediador de una agrupación la agrupación a la que pertenecía para hacer un recálculo de visibilidad de la anterior ya que si tuviera usuarios AGR debería de hacerse un recálculo de la visibilidad completa</description>
    <label>Last Intermediary Group</label>
    <length>18</length>
    <type>Text</type>
</CustomField>