force-app/zurich-base/main/default/objects/Account/fields/LastIntermediaryGroupChange__c.field-meta.xml
<CustomField>
    <fullName>LastIntermediaryGroupChange__c</fullName>
    <description>[ZRM] informo este campo cuando se ha modificado la relación entre un mediador y el campo agrupación IntermediaryGroup__c. Se informa a partir de la actualización de agrupaciones por external request de INFO</description>
    <label>Last Intermediary Group Change</label>
    <type>Date</type>
</CustomField>