force-app/zurich-base/main/default/objects/Account/fields/LastStatusModification__c.field-meta.xml
<CustomField>
    <fullName>LastStatusModification__c</fullName>
    <label>Last status modification</label>
    <type>Date</type>
</CustomField>