force-app/zurich-base/main/default/objects/Account/fields/LeadBusinessCode__c.field-meta.xml
<CustomField>
    <fullName>LeadBusinessCode__c</fullName>
    <description>ZE - Campaña Telemarketing, contiene el código del metadato Scope Setting para Zurich Empresas (3200012491)</description>
    <label>Lead Business Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>