force-app/zurich-base/main/default/objects/Account/fields/LeadPhone__c.field-meta.xml
<CustomField>
    <fullName>LeadPhone__c</fullName>
    <description>ZE Campaña Telemarketing, este teléfono crea ContactPointPhone al Scope en un flow</description>
    <label>Lead Phone</label>
    <type>Phone</type>
</CustomField>