force-app/zurich-base/main/default/objects/Account/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <description>ZE - Campaña Telemarketing. Sirve para filtrar el registro en el trigger AccountUtil y generar Scope para dichas cuentas. El filtro es &apos;Telemarketing&apos;</description>
    <label>Lead Telemarketing Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>