force-app/zurich-base/main/default/objects/Account/fields/LeadsPool__c.field-meta.xml
<CustomField>
    <fullName>LeadsPool__c</fullName>
    <label>Leads Pool</label>
    <length>255</length>
    <type>Text</type>
</CustomField>