force-app/zurich-base/main/default/objects/Account/fields/LeadWebId__c.field-meta.xml
<CustomField>
    <fullName>LeadWebId__c</fullName>
    <description>This field is used to avoid duplicate of leads when the ZE form is abandoned. Will be used concatenating the email and phone.</description>
    <externalId>true</externalId>
    <label>LeadWebId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>