force-app/zurich-base/main/default/objects/Account/fields/LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>LegalEntity__c</fullName>
    <label>Legal Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LegalEntity</valueSetName>
    </valueSet>
</CustomField>