force-app/zurich-base/main/default/objects/Account/fields/LifeConsultant__c.field-meta.xml
<CustomField>
    <fullName>LifeConsultant__c</fullName>
    <label>Life Consultant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>