force-app/zurich-base/main/default/objects/Account/fields/LifeConsultantEmail__c.field-meta.xml
<CustomField>
    <fullName>LifeConsultantEmail__c</fullName>
    <description>SDM: Consultor Vida Email</description>
    <label>Life Consultant Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>