force-app/zurich-base/main/default/objects/Account/fields/LifeManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>LifeManagerEmail__c</fullName>
    <description>SDM: Director Vida Email</description>
    <label>Life Manager Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>