force-app/zurich-base/main/default/objects/Account/fields/LifeManagerName__c.field-meta.xml
<CustomField>
    <fullName>LifeManagerName__c</fullName>
    <description>SDM: Director Vida Name</description>
    <label>Life Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>