force-app/zurich-base/main/default/objects/Account/fields/LifeMangedBonus__c.field-meta.xml
<CustomField>
    <fullName>LifeMangedBonus__c</fullName>
    <label>Life Manged Bonus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>