force-app/zurich-base/main/default/objects/Account/fields/LifeSegment__c.field-meta.xml
<CustomField>
    <fullName>LifeSegment__c</fullName>
    <label>Life Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>