force-app/zurich-base/main/default/objects/Account/fields/LifeSpecialist__c.field-meta.xml
<CustomField>
    <fullName>LifeSpecialist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Life Specialist</label>
    <type>Checkbox</type>
</CustomField>