force-app/zurich-base/main/default/objects/Account/fields/LinkedExclusive__c.field-meta.xml
<CustomField>
    <fullName>LinkedExclusive__c</fullName>
    <label>Linked / Exclusive</label>
    <type>TextArea</type>
</CustomField>