force-app/zurich-base/main/default/objects/Account/fields/ListaRobinson__c.field-meta.xml
<CustomField>
    <fullName>ListaRobinson__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(OCS/ZE). Indica si el cliente está dado de alta en la Lista Robinson</description>
    <label>Lista Robinson</label>
    <type>Checkbox</type>
</CustomField>