force-app/zurich-base/main/default/objects/Account/fields/MainEmail__c.field-meta.xml
<CustomField>
    <fullName>MainEmail__c</fullName>
    <label>Main Email</label>
    <type>Email</type>
</CustomField>