force-app/zurich-base/main/default/objects/Account/fields/MainMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MainMobilePhone__c</fullName>
    <label>Main Mobile Phone</label>
    <type>Phone</type>
</CustomField>