force-app/zurich-base/main/default/objects/Account/fields/ManagedBonus__c.field-meta.xml
<CustomField>
    <fullName>ManagedBonus__c</fullName>
    <label>Managed Bonus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>