force-app/zurich-base/main/default/objects/Account/fields/ManagementProgram__c.field-meta.xml
<CustomField>
    <fullName>ManagementProgram__c</fullName>
    <label>Management Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MPM</fullName>
            </value>
            <value>
                <fullName>Ebroker</fullName>
                <label>EBROKER</label>
            </value>
            <value>
                <fullName>QS</fullName>
            </value>
            <value>
                <fullName>T-SIS</fullName>
            </value>
            <value>
                <fullName>ActiveX (Winbrok)</fullName>
            </value>
            <value>
                <fullName>GECOSE</fullName>
            </value>
            <value>
                <fullName>MERLIN</fullName>
            </value>
            <value>
                <fullName>PERISCLOUD</fullName>
            </value>
            <value>
                <fullName>SEGURLIF</fullName>
            </value>
            <value>
                <fullName>SEGUROS BROKER</fullName>
            </value>
            <value>
                <fullName>WILLPLATINE</fullName>
            </value>
            <value>
                <fullName>MPM - SegElevia</fullName>
            </value>
            <value>
                <fullName>CODEOSCOPIC - Tesis</fullName>
            </value>
            <value>
                <fullName>SOFTQS - iSegur</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>