force-app/zurich-base/main/default/objects/Account/fields/ManagementSystemCRM__c.field-meta.xml
<CustomField>
    <fullName>ManagementSystemCRM__c</fullName>
    <label>Management system / CRM</label>
    <type>TextArea</type>
</CustomField>