force-app/zurich-base/main/default/objects/Account/fields/ManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>ManagerEmail__c</fullName>
    <description>SDM: Director Zona Email</description>
    <label>Manager Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>