force-app/zurich-base/main/default/objects/Account/fields/ManagerName__c.field-meta.xml
<CustomField>
    <fullName>ManagerName__c</fullName>
    <description>SDM: Director Zona Name</description>
    <label>Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>