force-app/zurich-base/main/default/objects/Account/fields/Masterpolicy__c.field-meta.xml
<CustomField>
    <fullName>Masterpolicy__c</fullName>
    <description>Partner identifier</description>
    <externalId>true</externalId>
    <inlineHelpText>Masterpolicy</inlineHelpText>
    <label>Código partner</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>