force-app/zurich-base/main/default/objects/Account/fields/MaxPermissionDecission__c.field-meta.xml
<CustomField>
    <fullName>MaxPermissionDecission__c</fullName>
    <description>Campo en el que los usuarios pueden indicar si la cuenta debe modificar su permiso máximo</description>
    <label>Decisión permiso máximo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Total</fullName>
            </value>
            <value>
                <fullName>Total sin administración</fullName>
            </value>
            <value>
                <fullName>Ofertas</fullName>
            </value>
            <value>
                <fullName>Consulta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>