force-app/zurich-base/main/default/objects/Account/fields/MediatorCommunication__c.field-meta.xml
<CustomField>
    <fullName>MediatorCommunication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mediator Communication</label>
    <type>Checkbox</type>
</CustomField>