force-app/zurich-base/main/default/objects/Account/fields/MiAgencia__c.field-meta.xml
<CustomField>
    <fullName>MiAgencia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ZRM</label>
    <type>Checkbox</type>
</CustomField>