force-app/zurich-base/main/default/objects/Account/fields/MiAgenciaAlias__c.field-meta.xml
<CustomField>
    <fullName>MiAgenciaAlias__c</fullName>
    <label>Mi Agencia Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>