force-app/zurich-base/main/default/objects/Account/fields/MiAgenciaUsage__c.field-meta.xml
<CustomField>
    <fullName>MiAgenciaUsage__c</fullName>
    <label>Acceso ZRM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>