force-app/zurich-base/main/default/objects/Account/fields/MiEmpresaLinkedinUsage__c.field-meta.xml
<CustomField>
    <fullName>MiEmpresaLinkedinUsage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MiEmpresa Linkedin Usage</label>
    <type>Checkbox</type>
</CustomField>