force-app/zurich-base/main/default/objects/Account/fields/MiZurich__c.field-meta.xml
<CustomField>
    <fullName>MiZurich__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(OCS/ZE). Indica si el cliente se encuentra registrado en la plataforma de Mi Zurich</description>
    <label>Mi Zurich</label>
    <type>Checkbox</type>
</CustomField>