force-app/zurich-base/main/default/objects/Account/fields/Multitarifier__c.field-meta.xml
<CustomField>
    <fullName>Multitarifier__c</fullName>
    <label>Multitarifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MPM - Tarifai</fullName>
            </value>
            <value>
                <fullName>EBROKER - Merlin</fullName>
            </value>
            <value>
                <fullName>SOFTQS</fullName>
            </value>
            <value>
                <fullName>WILLPLATINE</fullName>
            </value>
            <value>
                <fullName>CODEOSCOPIC - Avant2</fullName>
            </value>
            <value>
                <fullName>OTROS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>