force-app/zurich-base/main/default/objects/Account/fields/NameAndIntermediaryCode__c.field-meta.xml
<CustomField>
    <fullName>NameAndIntermediaryCode__c</fullName>
    <description>Campo que se utiliza en el lookup del formulario de peticiones de mercado</description>
    <formula>Name + &apos; - &apos; + INFOIntermediaryCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre y código de intermediario</label>
    <type>Text</type>
</CustomField>