force-app/zurich-base/main/default/objects/Account/fields/NameLink__c.field-meta.xml
<CustomField>
    <fullName>NameLink__c</fullName>
    <description>Campo que se utiliza en el flow Clientes Mediador, para generar un link al cliente</description>
    <label>NameLink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>