force-app/zurich-base/main/default/objects/Account/fields/NatAdvisoryCouncil__c.field-meta.xml
<CustomField>
    <fullName>NatAdvisoryCouncil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>National Advisory Council</label>
    <type>Checkbox</type>
</CustomField>