force-app/zurich-base/main/default/objects/Account/fields/NationalId__c.field-meta.xml
<CustomField>
    <fullName>NationalId__c</fullName>
    <description>(OCS/ZE). Identificador nacional del cliente</description>
    <label>National ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>