force-app/zurich-base/main/default/objects/Account/fields/NationalIdType__c.field-meta.xml
<CustomField>
    <fullName>NationalIdType__c</fullName>
    <description>(OCS/ZE). Tipo de documento de identidad</description>
    <label>National ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
            <value>
                <fullName>TW</fullName>
            </value>
            <value>
                <fullName>TZ</fullName>
            </value>
            <value>
                <fullName>UA</fullName>
            </value>
            <value>
                <fullName>UG</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>UY</fullName>
            </value>
            <value>
                <fullName>UZ</fullName>
            </value>
            <value>
                <fullName>VA</fullName>
            </value>
            <value>
                <fullName>VC</fullName>
            </value>
            <value>
                <fullName>VE</fullName>
            </value>
            <value>
                <fullName>VG</fullName>
            </value>
            <value>
                <fullName>VI</fullName>
            </value>
            <value>
                <fullName>VN</fullName>
            </value>
            <value>
                <fullName>VU</fullName>
            </value>
            <value>
                <fullName>WF</fullName>
            </value>
            <value>
                <fullName>WS</fullName>
            </value>
            <value>
                <fullName>YE</fullName>
            </value>
            <value>
                <fullName>YT</fullName>
            </value>
            <value>
                <fullName>ZA</fullName>
            </value>
            <value>
                <fullName>ZM</fullName>
            </value>
            <value>
                <fullName>ZW</fullName>
            </value>
            <value>
                <fullName>T</fullName>
                <isActive>false</isActive>
                <label>T</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>