force-app/zurich-base/main/default/objects/Account/fields/NoLifePremium__c.field-meta.xml
<CustomField>
    <fullName>NoLifePremium__c</fullName>
    <description>Suma de las primas de las Pólizas en vigor que no sean de vida</description>
    <label>No Life Premium</label>
    <summarizedField>Policy__c.TotalPremium__c</summarizedField>
    <summaryFilterItems>
        <field>Policy__c.PolicyStatus__c</field>
        <operation>equals</operation>
        <value>Vigor</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Policy__c.LegalEntity__c</field>
        <operation>equals</operation>
        <value>Zurich</value>
    </summaryFilterItems>
    <summaryForeignKey>Policy__c.PolicyHolder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>