force-app/zurich-base/main/default/objects/Account/fields/NotifyMiZurich__c.field-meta.xml
<CustomField>
    <fullName>NotifyMiZurich__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Mi Zurich</label>
    <type>Checkbox</type>
</CustomField>