force-app/zurich-base/main/default/objects/Account/fields/NotifyPremiumRenewal__c.field-meta.xml
<CustomField>
    <fullName>NotifyPremiumRenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify premium renewal</label>
    <type>Checkbox</type>
</CustomField>