force-app/zurich-base/main/default/objects/Account/fields/NumberCompetingCompanies__c.field-meta.xml
<CustomField>
    <fullName>NumberCompetingCompanies__c</fullName>
    <label>Number of Competing Companies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>