force-app/zurich-base/main/default/objects/Account/fields/NumberEmployees__c.field-meta.xml
<CustomField>
    <fullName>NumberEmployees__c</fullName>
    <label>Nº employees (includes external collabor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>