force-app/zurich-base/main/default/objects/Account/fields/NumberOfContacts__c.field-meta.xml
<CustomField>
    <fullName>NumberOfContacts__c</fullName>
    <description>Hidden Field used to set the number of contacts, used in customer entity formula field to determine if a customer of opposite legal entity exist.</description>
    <label>Número de contactos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>