force-app/zurich-base/main/default/objects/Account/fields/NumberOffices__c.field-meta.xml
<CustomField>
    <fullName>NumberOffices__c</fullName>
    <label>Nº of offices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>