force-app/zurich-base/main/default/objects/Account/fields/NumNoLifePolicy__c.field-meta.xml
<CustomField>
    <fullName>NumNoLifePolicy__c</fullName>
    <description>Calculo de las pólizas en vigor que no son de vida por cliente</description>
    <label>Number No Life Policy</label>
    <summaryFilterItems>
        <field>Policy__c.PolicyStatus__c</field>
        <operation>equals</operation>
        <value>Vigor</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Policy__c.LegalEntity__c</field>
        <operation>equals</operation>
        <value>Zurich</value>
    </summaryFilterItems>
    <summaryForeignKey>Policy__c.PolicyHolder__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>