force-app/zurich-base/main/default/objects/Account/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <description>[ZDA] Oficina para los DSE</description>
    <label>Office</label>
    <length>80</length>
    <type>Text</type>
</CustomField>