force-app/zurich-base/main/default/objects/Account/fields/OfficeStreetLevel__c.field-meta.xml
<CustomField>
    <fullName>OfficeStreetLevel__c</fullName>
    <label>Office at street level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>