force-app/zurich-base/main/default/objects/Account/fields/OwnCorporateWebURL__c.field-meta.xml
<CustomField>
    <fullName>OwnCorporateWebURL__c</fullName>
    <label>Own / corporate web URL</label>
    <length>80</length>
    <type>Text</type>
</CustomField>