force-app/zurich-base/main/default/objects/Account/fields/Parent_Business_Code__c.field-meta.xml
<CustomField>
    <fullName>Parent_Business_Code__c</fullName>
    <label>Parent Business Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>