force-app/zurich-base/main/default/objects/Account/fields/ParentBusinessName__c.field-meta.xml
<CustomField>
    <fullName>ParentBusinessName__c</fullName>
    <label>Parent Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>