force-app/zurich-base/main/default/objects/Account/fields/ParticipatesInAction__c.field-meta.xml
<CustomField>
    <fullName>ParticipatesInAction__c</fullName>
    <label>Participates in action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>