force-app/zurich-base/main/default/objects/Account/fields/PartnerSector__c.field-meta.xml
<CustomField>
    <fullName>PartnerSector__c</fullName>
    <description>Partner Sector for Genesys routing</description>
    <label>Partner Sector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>