force-app/zurich-base/main/default/objects/Account/fields/PartnerSFCode__c.field-meta.xml
<CustomField>
    <fullName>PartnerSFCode__c</fullName>
    <description>Partner Code for Genesys routing</description>
    <label>Partner SF Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>