force-app/zurich-base/main/default/objects/Account/fields/PerceptionLevelOfDigitization__c.field-meta.xml
<CustomField>
    <fullName>PerceptionLevelOfDigitization__c</fullName>
    <label>Perception level of digitization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>