force-app/zurich-base/main/default/objects/Account/fields/PersonLeadSource__c.field-meta.xml
<CustomField>
    <fullName>PersonLeadSource__c</fullName>
    <defaultValue>&apos;Manual&apos;</defaultValue>
    <label>Person Lead Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>