force-app/zurich-base/main/default/objects/Account/fields/PlusCommunities__c.field-meta.xml
<CustomField>
    <fullName>PlusCommunities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plus Communities</label>
    <type>Checkbox</type>
</CustomField>