force-app/zurich-base/main/default/objects/Account/fields/PositionRepresentation__c.field-meta.xml
<CustomField>
    <fullName>PositionRepresentation__c</fullName>
    <label>Position/representation in an institutio</label>
    <length>80</length>
    <type>Text</type>
</CustomField>