force-app/zurich-base/main/default/objects/Account/fields/PotentialBroker__c.field-meta.xml
<CustomField>
    <fullName>PotentialBroker__c</fullName>
    <description>Campo para visualizar desde los informes si una cuenta se considera corredor potencial, ya sea por que tenga ese tipo de registro o porque esté inactiva. SDM</description>
    <formula>OR(RecordType.Name = &apos;Potential_Broker&apos;, StatusIntermediary__c = &apos;Inactive&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corredor Potencial</label>
    <type>Checkbox</type>
</CustomField>