force-app/zurich-base/main/default/objects/Account/fields/PreClientPortfolioCommunication__c.field-meta.xml
<CustomField>
    <fullName>PreClientPortfolioCommunication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Intermediario que recibe listado de mediadores a los que mandar precartera</description>
    <label>Pre Client Portfolio Communication</label>
    <type>Checkbox</type>
</CustomField>