force-app/zurich-base/main/default/objects/Account/fields/PreferentialZRC__c.field-meta.xml
<CustomField>
    <fullName>PreferentialZRC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preferential ZRC</label>
    <type>Checkbox</type>
</CustomField>