force-app/zurich-base/main/default/objects/Account/fields/PreferredContactChannel__c.field-meta.xml
<CustomField>
    <fullName>PreferredContactChannel__c</fullName>
    <label>Preferred Contact Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Teléfono</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>